# graphguard

./: .gitignore  README.md  main.py  pyproject.toml
graphguard/: cli.py  graph.py  state.py
graphguard/analyzers/: supply_chain.py
graphguard/nodes/: analyzer.py  parser.py  parser_js.py  reporter.py  scorer.py
graphguard/tests/: test_analyzers.py  test_parser.py  test_reporter.py
tests/vulnerable_agent/: agent.js  agent.py  graph.js
