[project]
name = "graphguard"
version = "0.1.0"
description = "Security linter for LangGraph agent pipelines"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.2.6",                  # agent orchestration framework
    "langchain-openai>=0.3.0",           # OpenAI-compatible client for llama-server
    "typer>=0.12.0",                     # CLI framework
    "rich>=13.0.0",                      # colored terminal output
    "httpx>=0.27.0",                     # HTTP client to reach llama-server
    "pydantic>=2.0.0",                   # data validation for findings schema
    "tree-sitter>=0.26.0",               # AST parser for JS/TS files
    "tree-sitter-javascript>=0.25.0",    # JavaScript grammar for tree-sitter
    "tree-sitter-typescript>=0.23.2",    # TypeScript grammar for tree-sitter
]

[project.scripts]
graphguard = "graphguard.cli:app"   # maps `graphguard` CLI command to graphguard/cli.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphguard"]      # tells hatch which package to include in the wheel

[tool.pytest.ini_options]
testpaths = ["graphguard/tests"]   # default test directory for pytest

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",               # test runner
]